import java.time.Instant

plugins {
	id 'base'
	id 'java'
	id 'idea'
	id 'maven-publish'
	id 'net.neoforged.moddev' version "2.0.141"
}

def ENV = System.getenv()
def CI = ENV.CI == "true"
def isLocal = !ENV.containsKey("GITHUB_RUN_NUMBER")

version = "$mod_version-${isLocal ? "local.${Instant.now().epochSecond}" : "build.${ENV.GITHUB_RUN_NUMBER}"}"
group = project.maven_group
base.archivesName = project.archives_base_name

println("Building version: $version")

neoForge {
	enable {
		version = project.neoforge_version
		validateAccessTransformers = !CI

		accessTransformers {
			publish(project.file('src/main/resources/META-INF/accesstransformer.cfg'))
		}

		interfaceInjectionData {
			from(file('interfaces.json'))
			publish(file('interfaces.json'))
		}

		runs {
			configureEach {
				logLevel = org.slf4j.event.Level.INFO
			}

			client {
				ideName = 'Client'
				client()
				// systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id

				if (ENV.MC_CLIENT_ARGS) {
					programArguments.addAll(ENV.MC_CLIENT_ARGS.split(' '))
				}

				jvmArguments.addAll("-XX:+IgnoreUnrecognizedVMOptions", "-XX:+AllowEnhancedClassRedefinition")
				gameDirectory = file 'runs/client'
			}

			server {
				ideName = 'Server'
				server()
				programArgument("--nogui")
				gameDirectory = file 'runs/server'
			}
		}

		mods {
			mod {
				sourceSet sourceSets.main
			}
		}
	}
}

compileJava {
	options.encoding = "UTF-8"
	options.release.set(25)
	options.compilerArgs << '-parameters' << '-Xmaxerrs' << '1000'
}

java {
	sourceCompatibility = targetCompatibility = '25'
	withSourcesJar()
	withJavadocJar()
}

configurations {
	runtimeClasspath.extendsFrom localRuntime
}

tasks.withType(Javadoc) {
	options.addStringOption('Xdoclint:none', '-quiet')
}

processResources {
	def toReplace = [
			"version": project.version
	]

	println("[Process Resources] Replacing properties in resources: " + toReplace)

	inputs.properties toReplace
	filesMatching("META-INF/neoforge.mods.toml") {
		expand toReplace
	}
}

jar {
	manifest {
		attributes([
				"Specification-Title"     : project.mod_id,
				"Specification-Vendor"    : project.mod_author,
				"Specification-Version"   : "1",
				"Implementation-Title"    : project.name,
				"Implementation-Version"  : version,
				"Implementation-Vendor"   : project.mod_author,
				"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
		])
	}
}

publishing {
	publications {
		mavenNeoForge(MavenPublication) {
			artifactId = archives_base_name
			from components.java
		}
	}

	repositories {
		if (ENV.MAVEN_URL && ENV.MAVEN_USERNAME && ENV.MAVEN_TOKEN) {
			maven {
				url = ENV.MAVEN_URL
				credentials {
					username = ENV.MAVEN_USERNAME
					password = ENV.MAVEN_TOKEN
				}
			}
		}
	}
}

idea {
	module {
		downloadSources = true
		downloadJavadoc = true

		["client", "server"].each {
			[
					"config",
					"crash-reports",
					"debug",
					"downloads",
					"flashback",
					"local",
					"logs",
					"mods",
					"pack-sync",
					"profilekeys",
					"saves",
					"voicechat_recordings",
					"command_history.txt",
					"options.txt",
					"server.properties",
					"world",
			].each { ext ->
				excludeDirs.add(file("runs/$it/$ext"))
			}
		}
	}
}